--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                 <span class="bar"></span>
             </div>
         </div>
+        <!-- Scroll Progress Indicator -->
+        <div class="scroll-progress">
+            <div class="progress-bar"></div>
+        </div>
     </nav>
 
     <!-- Hero Section -->
