Back to Top Button

--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
         </div>
     </nav>
 
+    <!-- Back to Top Button-->
+    <button class="back-to-top" id="backToTop">
+        <i class="fas fa-arrow-up"></i>
+    </button>
+
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
